// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Disabled 1`] = `
<Button
  disabled={true}
  label="Disabled"
  onClick={[Function]}
  styling="normal-blue btn"
  testId=""
>
  <button
    className="bcgov-button normal-blue btn"
    data-test-id=""
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Disabled
  </button>
</Button>
`;

exports[`Storyshots Button Mobile 1`] = `
<Button
  disabled={false}
  label="Submit"
  onClick={[Function]}
  styling="normal-blue btn"
  testId=""
>
  <button
    className="bcgov-button normal-blue btn"
    data-test-id=""
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Submit
  </button>
</Button>
`;

exports[`Storyshots Button Primary 1`] = `
<Button
  disabled={false}
  label="Submit"
  onClick={[Function]}
  styling="normal-blue btn"
  testId=""
>
  <button
    className="bcgov-button normal-blue btn"
    data-test-id=""
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Submit
  </button>
</Button>
`;

exports[`Storyshots Button Secondary 1`] = `
<Button
  disabled={false}
  label="Cancel"
  onClick={[Function]}
  styling="normal-white btn"
  testId=""
>
  <button
    className="bcgov-button normal-white btn"
    data-test-id=""
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
</Button>
`;
